# ycmd

./: .clang-tidy  .gitignore  .gitmodules  .mergify.yml  .travis.yml  .ycm_extra_conf.py  CONTRIBUTING.md  DEBUG.md  README.md  appveyor.yml  azure-pipelines.yml  build.py  codecov.yml  run_tests.py  test.c  test_requirements.txt  update_boost.py  update_clang.py  update_clang_headers.py  update_omnisharp.py  update_unicode.py  valgrind.suppressions  xxx.c
.circleci/: config.yml
.github/workflows/: ci.yml
azure/: benchmark.sh  lint.sh  run_tests.sh  send_coverage.sh
azure/linux/: install_dependencies.sh
azure/macos/: install_dependencies.sh
azure/windows/: benchmark.bat  install_dependencies.bat  run_tests.bat
ci/travis/: travis_install.sh
cpp/: CMakeLists.txt
cpp/ctre/ctre/: return_type.hpp
cpp/re2/: CMakeLists.txt
cpp/robin_hood/: robin_hood.h
cpp/ycm/: CMakeLists.txt  Candidate.cpp  Candidate.h  CandidateRepository.cpp  CandidateRepository.h  Character.cpp  Character.h  CharacterRepository.cpp  CharacterRepository.h  CodePoint.cpp  CodePoint.h  CodePointRepository.cpp  CodePointRepository.h  IdentifierCompleter.cpp  IdentifierCompleter.h  IdentifierDatabase.cpp  IdentifierDatabase.h  IdentifierUtils.cpp  IdentifierUtils.h  PythonSupport.cpp  PythonSupport.h  ReleaseGil.h  Result.cpp  Result.h  Utils.cpp  Utils.h  Word.cpp  Word.h  ycm_core.cpp
cpp/ycm/ClangCompleter/: ClangCompleter.cpp  ClangCompleter.h  ClangHelpers.cpp  ClangHelpers.h  CompilationDatabase.cpp  CompilationDatabase.h  (+10 more)
examples/: README.md
tests/clang/: __init__.py  conftest.py  diagnostics_test.py
ycmd/: __main__.py  bottle_utils.py  default_settings.json  extra_conf_store.py  handlers.py  hmac_plugin.py  hmac_utils.py  identifier_utils.py  request_validation.py  request_wrap.py  responses.py  server_state.py  server_utils.py  user_options_store.py  utils.py  watchdog_plugin.py  wsgi_server.py
ycmd/completers/: basic_completer.py  completer.py  completer_utils.py  general_completer.py
ycmd/tests/: __init__.py  bottle_utils_test.py  client_test.py  completer_test.py  completer_utils_test.py  conftest.py  diagnostics_test.py  extra_conf_store_test.py  filename_completer_test.py  get_completions_test.py  hmac_utils_test.py  identifier_completer_test.py  identifier_utils_test.py  misc_handlers_test.py  python_support_test.py  request_validation_test.py  request_wrap_test.py  server_utils_test.py  shutdown_test.py  signature_help_test.py  subcommands_test.py  test_utils.py  utils_test.py
(+154 files in other folders)
